# Readma

./: LICENSE.md  README.md  pyproject.toml  setup.cfg  tox.ini
src/readma/: __init__.py  readma.py
src/tests/: test_Readma.py
tests/: test_Readma.py
