[metadata]
name = Readma
version = 1.0.0
description = Readma? What's Readma?
author = whamer100
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
url = https://github.com/whamer100/Readma
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = Readma
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
Readma = py.typed

[flake8]
max-line-length = 160